crates/reinhardt-pages/tests/ui/client_form/fail/restricted_private_editable_field.rs
use reinhardt_pages::ClientForm;

#[derive(Clone, ClientForm)]
pub(crate) struct SettingsRequest {
	pub name: String,
	secret: String,
}

fn main() {}
