crates/reinhardt-pages/tests/ui/client_form/fail/restricted_private_editable_field.stderr
error: ClientForm exported DTOs cannot expose private editable fields; mark the field public or skip it explicitly
 --> tests/ui/client_form/fail/restricted_private_editable_field.rs:6:2
  |
6 |     secret: String,
  |     ^^^^^^
